--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
         </ul>
-        <ul>
-          <li>A margin indicates how much space we want around the outside of an element.</li>
-          <li>A padding indicates how much space we want around the content inside an element.</li>
-          <li>A border assign a solid or not, big or small line around the element</li>
-          <li>A width indicates the talleness of the element</li>
-        </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A border assign a solid or not, big or small line around the element</li>
+          <li>A width indicates the height of the element</li>
         </ul>
       </section>
    
@@ -46,7 +43,8 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>  
